sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:13: error: ')' expected but '}' found.
  }
  ^